Fix slushie page nav bar overlap

--- a/slushie/style.css
+++ b/slushie/style.css
@@ -10,14 +10,15 @@ body {
   justify-content: center;
   user-select: none;
   overflow: hidden;
+  padding-top: 55px;
 }
 
 #game {
   position: relative;
   width: 1100px;
   max-width: 100vw;
-  height: 700px;
-  max-height: 100vh;
+  height: calc(100vh - 55px);
+  max-height: calc(100vh - 55px);
   display: flex;
   flex-direction: column;
 }
